#3 Реализовал страницу с постами

--- a/src/components/UI/Navbar/NavBar.css
+++ b/src/components/UI/Navbar/NavBar.css
@@ -1,6 +1,6 @@
 .NavBar-background {
     width: 100%;
-    background-color: rgb(50, 45, 49);
+    background-color: #a6ba7b;
     display: flex;
     flex-direction: column;
     justify-content: center;
