--- a/src/sass/UI/_navbar.sass
+++ b/src/sass/UI/_navbar.sass
@@ -13,6 +13,8 @@
     &__link
         text-decoration: none
         color: white
+        &:hover
+            color: var(--green)
 .pink
     color: var(--green)
     &:hover
