--- a/src/sass/UI/_navbar.sass
+++ b/src/sass/UI/_navbar.sass
@@ -11,6 +11,9 @@
             align-items: center
             gap: 40px
     &__link
+        border: none
+        background-color: transparent
+        font-size: 20px
         text-decoration: none
         color: white
         &:hover
