--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -25,7 +25,7 @@
     background-color: var(--background)
     font-family: var(--font-family)
     width: 100%
-    height: 100vh
+    min-height: 100vh
     overflow: hidden
     position: relative
 
