#4 стилизация страницы с постами, ддобавление README

--- a/src/sass/pages/_homePage.sass
+++ b/src/sass/pages/_homePage.sass
@@ -17,4 +17,6 @@
         color: white
         margin-top: 15px
         font-family: var(--font-family)
-    
+    &__quotes
+        color: var(--green)
+        font-size: 18px
