--- a/src/sass/pages/_usersPage.sass
+++ b/src/sass/pages/_usersPage.sass
@@ -4,6 +4,7 @@
     display: flex
     justify-content: center
     flex-direction: column
+    margin-bottom: 40px
     &__title
         margin: 20px 0
         color: white
