--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -1,20 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap")
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap')
 
 :root 
     --orange: #ff8139
     --pink: #ff3998
     --green: #39ffa0
-    --red: #ff3939
-    --light-green: #edfff6
+    --light-green: #84e6b5
     --light-orange: #fff0e8
     --accent-color1: #ffffff
     --accent-color2: #555555
     --accent-color3: #cccccc
-    --card-color: #000000
     --background: #111111
     --font-family: 'Montserrat', sans-serif
-
 
 * 
     padding: 0
@@ -30,8 +26,5 @@
     position: relative
 
 .container 
-    font-family: var(--font-family)
     width: 1020px
     margin: 0 auto
-  
-
