--- a/src/sass/pages/_notFoundPage.sass
+++ b/src/sass/pages/_notFoundPage.sass
@@ -1,7 +1,5 @@
 .not_found_page
-    display: flex
-    align-items: center
-    justify-content: center
+    +flex_center
     flex-direction: column
     gap: 30px
     &__title, &__text
