--- a/src/sass/UI/_navbar.sass
+++ b/src/sass/UI/_navbar.sass
@@ -10,16 +10,19 @@
             display: flex
             align-items: center
             gap: 40px
+            +smartphone
+                gap: 20px
     &__link
         border: none
         background-color: transparent
         font-size: 20px
         text-decoration: none
         color: white
+        +smartphone
+            font-size: 16px
         &:hover
             color: var(--green)
 .pink
     color: var(--green)
     &:hover
         color: white
-    
