--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,3 +1,4 @@
+@import "base/mixins"
 @import "base/base"
 
 @import "pages/loginPage"
@@ -5,7 +6,6 @@
 @import "pages/postsPage"
 @import "pages/usersPage"
 @import "pages/homePage"
-
 
 @import "UI/darkButton"
 @import "UI/layout"
