#4 Отредактировал стили лого

--- a/src/sass/pages/_loginPage.sass
+++ b/src/sass/pages/_loginPage.sass
@@ -43,7 +43,8 @@
         outline: none
         color: white
         padding: 8px
-        background: transparent
+        background: none
+        
     &__input-password
         padding-right: 50px
         outline: none
