--- a/src/sass/pages/_usersPage.sass
+++ b/src/sass/pages/_usersPage.sass
@@ -64,6 +64,7 @@
             height: 4px
             transform: translateX(-50%) 
             transition: 0.7s ease-in-out
+            border-radius: 5px
     &:hover &__animate::before
         width: 40px
         height: 8px
