--- a/src/sass/UI/_logo.sass
+++ b/src/sass/UI/_logo.sass
@@ -1,6 +1,22 @@
 .logo_link 
     text-decoration: none
     font-size: 40px
-    color: white
     +smartphone
         font-size: 20px
+    background-clip: text
+    color: transparent
+    background-image: linear-gradient(45deg, #027f4b, #95db6c, #0cd57e, #23a4db, #21d389, #11f024, #3ae9a0, #75dbb1, #01e06d, #96e2c3, #4bcf2e, #a4d444)
+    background-size: 400% 400%
+    animation: animate 15s ease infinite
+
+@keyframes animate 
+    0%
+        background-position: 0 0
+    25%
+        background-position: 100% 0
+    50%
+        background-position: 100% 100%
+    75%
+        background-position: 0 100%
+    100%
+        background-position: 0 0
