#4 Поправил имя  юзера в хэдере

--- a/src/sass/UI/_navbar.sass
+++ b/src/sass/UI/_navbar.sass
@@ -2,6 +2,8 @@
     position: relative
     z-index: 100
     padding: 30px 30px
+    +smartphone
+        padding: 30px 10px
     &__main_row
         display: flex
         justify-content: space-between
@@ -26,3 +28,8 @@
     color: var(--green)
     &:hover
         color: white
+
+.username 
+    color: white
+    margin-right: 20px
+    font-size: 20px
