--- a/src/sass/pages/_usersPage.sass
+++ b/src/sass/pages/_usersPage.sass
@@ -8,7 +8,7 @@
     &__title
         margin: 20px 0
         color: white
-    &__noe_data
+    &__no_data
         color: var(--pink)
 
 .usersList
@@ -23,18 +23,14 @@
     display: flex
     justify-content: space-between
     align-items: center
-    // transition: 0.3s
+    transition: 0.3s
     backdrop-filter: blur(2px)
     -webkit-backdrop-filter: blur(10px)
     cursor: pointer
-    +smartphone
-        padding: 10px
-        flex-direction: column
-        align-items: flex-start
-    // &:hover
-    //     box-shadow: 0 0 30px var(--green)
-    //     scale: 1.02
-    //     background: var(--green)
+    &:hover
+        box-shadow: 0 0 30px var(--green)
+        scale: 1.02
+        background: var(--green)
     &__name
         position: relative
         color: white
@@ -51,24 +47,45 @@
         border-radius: 8px
     &:hover &__name
         color: var(--green)
-    // &__animate
-    //     position: absolute
-    //     inset: 0
-    //     display: block
-    //     &::before
-    //         content: ""
-    //         position: absolute
-    //         top: -2px
-    //         left: 90%
-    //         width: 20px
-    //         height: 4px
-    //         transform: translateX(-50%) 
-    //         transition: 0.7s ease-in-out
-    //         border-radius: 5px
-    // &:hover &__animate::before
-    //     width: 40px
-    //     height: 8px
-    //     top: -3px
-    //     left: 10%
-    //     background: white
-    //     box-shadow: 0 0 20px var(--orange)
+    &__animate
+        position: absolute
+        inset: 0
+        display: block
+        &::before
+            content: ""
+            position: absolute
+            top: -2px
+            left: 90%
+            width: 20px
+            height: 4px
+            transform: translateX(-50%) 
+            transition: 0.7s ease-in-out
+            border-radius: 5px
+    &:hover &__animate::before
+        width: 40px
+        height: 8px
+        top: -3px
+        left: 10%
+        background: white
+        box-shadow: 0 0 20px var(--orange)
+    +smartphone
+        padding: 10px
+        flex-direction: column
+        align-items: flex-start
+        transition: none
+        &__name
+            color: var(--green)
+        &:hover
+            box-shadow: none
+            scale: 1
+            background: none
+        &::before
+            display: none
+        &:hover &__name
+            color: var(--green)
+        &__animate
+            display: none
+        &::before
+            display: none
+        &:hover &__animate::before
+            display: none
